FIx width on mobile.

--- a/app/css/pictureStripe.styl
+++ b/app/css/pictureStripe.styl
@@ -22,3 +22,7 @@
       transform: translate(-50%, -1%, 0)
   .well
     background-color: rgba(0, 0, 0, 0.4)
+  @media-width(max-width: 1200px)
+    .pictureStripe
+      max-width: 1200px
+      height: auto
